--- a/DevelopmentProject/app/src/main/AndroidManifest.xml
+++ b/DevelopmentProject/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustNothing"
+
+            android:windowSoftInputMode="stateHidden|adjustResize"
+
             android:exported="true"
             android:theme="@style/Theme.DevelopmentProject.NoActionBar"
             >
@@ -24,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
