Uygulamanın dark mode'u ile light mode'u aynı şekilde gözüküyor artık.

--- a/DevelopmentProject/app/src/main/AndroidManifest.xml
+++ b/DevelopmentProject/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@drawable/citrus_orbit_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.DevelopmentProject"
+        android:name=".MyApplication"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
